# kg-lang

./: .travis.yml  Cargo.toml  README.md
kg-syntax/: Cargo.toml
kg-syntax-gen/: Cargo.toml
kg-syntax-gen-test/: Cargo.toml  build.rs
kg-syntax-gen-test/src/: main.rs
kg-syntax-gen/resources/: num.lex
kg-syntax-gen/src/: lex.rs  lib.rs  parse.rs  tpl_dfa.rs  tpl_nfa.rs
kg-syntax-test/: Cargo.toml
kg-syntax-test/src/: main.rs
kg-syntax/resources/java/grammar/: java.grammar  java.js.g
kg-syntax/src/: lib.rs
kg-syntax/src/grammar/: mod.rs  parse.rs
kg-syntax/src/lexer/: commons.rs  dfa.rs  mod.rs  nfa.rs  prog.rs
kg-syntax/src/parser/: mod.rs
kg-syntax/src/parser/clr/: build.rs  mod.rs
kg-syntax/src/regex/: mod.rs  parse.rs  tests.rs
kg-syntax/src/runtime/: mod.rs
kg-syntax/tests/: grammar.rs
resources/: point-diff.patch
resources/java/grammar/: java.grammar
resources/java/src/main/java/org/example/geom/: Point2.java  Point3.java
src/: lib.rs
src/grammar/: mod.rs  parse.rs
src/lexer/: commons.rs  dfa.rs  mod.rs  nfa.rs  prog.rs
src/parser/: glr.rs  mod.rs
src/parser/clr/: build.rs  mod.rs
src/regex/: mod.rs  parse.rs  tests.rs
src/runtime/: mod.rs  script.rs
tests/: grammar.rs
