[package]
name = "kg-lang"
version = "0.1.1"
authors = ["jchlapinski <jakub.chlapinski@kodegenix.pl>"]
description = """
Runtime LR(1) parser generator library.
"""
readme = "README.md"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/kodegenix/kg-lang"
edition = "2018"

[workspace]

[dependencies]
kg-diag = "0.4.0"
kg-js = "0.1.1"
kg-tree = "0.2.1"
kg-utils = "0.4.0"
log = "0.4.11"
libc = "0.2.76"
