[package]
name = "kg-syntax-gen"
version = "0.1.0"
authors = ["jchlapinski <jakub.chlapinski@kodegenix.pl>"]
edition = "2018"

[dependencies]
kg-diag = "0.4.0"
kg-diag-derive = "0.4.0"
kg-display-derive = "0.1.1"
kg-syntax = { path = "../kg-syntax" }
regex = "1.5.4"
lazy_static = "1.4.0"
Inflector = "0.11.4"
